# CompTransportProject

./: CMakeLists.txt  CMakePresets.json  README.md  collprob.cpp  collprob.h  eigenvalue.cpp  eigenvalue.h  fixedsource.cpp  fixedsource.h  geom.cpp  geom.h  input.cpp  input.h  main.cpp  main.h  matrix.cpp  matrix.h  plot.cpp  plot.h  problem1  problem2  tau.cpp  tau.h  timer.h  transport.cpp  transport.h
